--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,13 @@
                 <div class="offer__slider">
                     <div class="swiper offerSwiper">
                         <div class="swiper-wrapper">
-                        <div class="swiper-slide">Slide 1</div>
+                        <div class="swiper-slide">
+                            <h3 class="swiper-slide__title">
+                                Молочные продукты
+                            </h3>
+                            <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                            <a href="#">Подробнее</a>
+                        </div>
                         <div class="swiper-slide">Slide 2</div>
                         <div class="swiper-slide">Slide 3</div>
                         <div class="swiper-slide">Slide 4</div>
