--- a/src/index.html
+++ b/src/index.html
@@ -89,39 +89,40 @@
                 <div class="offer__slider">
                     <div class="swiper offerSwiper">
                         <div class="swiper-wrapper">
-                        <div class="swiper-slide swiper-slide-milk">
-                            <h3 class="swiper-slide__title">
-                                Молочные продукты
-                            </h3>
-                            <div class="swiper-slide__hover">
-                                <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                            <a href="#">Подробнее</a>
-                            </div>                            
-                        </div>
-                        <div class="swiper-slide swiper-slide-pasta">
-                            <h3 class="swiper-slide__title">
-                                Молочные продукты
-                            </h3>
-                            <div class="swiper-slide__hover">
-                                <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                            <a href="#">Подробнее</a>
-                            </div>                            
-                        </div>
-                        <div class="swiper-slide swiper-slide-steaks">
-                            <h3 class="swiper-slide__title">
-                                Молочные продукты
-                            </h3>
-                            <div class="swiper-slide__hover">
-                                <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                            <a href="#">Подробнее</a>
-                            </div>                            
-                        </div>                                                
-                        </div>
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-pagination"></div>
-                    </div>
-                </div>                
+                            <div class="swiper-slide swiper-slide_milk">
+                                <h3 class="swiper-slide__title">
+                                    Молочные продукты
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                </div>                            
+                            </div>                        
+                            <div class="swiper-slide swiper-slide_pasta">
+                                <h3 class="swiper-slide__title">
+                                    Бакалея
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                </div>                            
+                            </div>
+                            <div class="swiper-slide swiper-slide_steaks">
+                                <h3 class="swiper-slide__title">
+                                    Мясо, птица
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                </div>                            
+                            </div>
+                                               
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-pagination"></div>
+                        </div> 
+                    </div>                                                 
+                </div>
             </div>
         </section>
         <section class="offer">
