--- a/src/index.html
+++ b/src/index.html
@@ -67,14 +67,16 @@
                         <span class="main__food">Томаты</span> 215 руб.
                     </button>
                 </div>
-             </div>           
-        </div>
+            </div>           
+            </div>
             <img class="main__tomato" src="images/tomato.png" alt="tomato">
             <img class="main__avocado" src="images/avocado.png" alt="avocado">
             <img class="main__pepper" src="images/pepper.png" alt="pepper">
             <img class="main__cucumber" src="images/cucumber.png" alt="cucumber">
             <img class="main__beans" src="images/beans.png" alt="beans">        
         </div>
+
+
         <section class="offer">
             <div class="container">
                 <h1 class="title title_block">
@@ -86,16 +88,45 @@
                         Органика — это целостная система производства по-настоящему чистой, натуральной и полезной продукции
                     </p>
                 </div>
-                <div class="offer__slider">
+                <div class="slider">
                     <div class="swiper offerSwiper">
                         <div class="swiper-wrapper">
+                            
+                            <div class="swiper-slide swiper-slide_white swiper-slide_milk">
+                                <h3 class="swiper-slide__title">
+                                    Молочные продукты
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a class="swiper-slide__link" href="#">Подробнее</a>                                    
+                                </div>                            
+                            </div>
+
+                            <div class="swiper-slide swiper-slide_white swiper-slide_pasta">
+                                <h3 class="swiper-slide__title">
+                                    Бакалея
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a class="swiper-slide__link" href="#">Подробнее</a> 
+                                </div>                            
+                            </div>
+                            <div class="swiper-slide swiper-slide_white swiper-slide_steaks">
+                                <h3 class="swiper-slide__title">
+                                    Мясо, птица
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a class="swiper-slide__link" href="#">Подробнее</a> 
+                                </div>                            
+                            </div>
                             <div class="swiper-slide swiper-slide_milk">
                                 <h3 class="swiper-slide__title">
                                     Молочные продукты
                                 </h3>
                                 <div class="swiper-slide__hover">
                                     <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                    <a class="swiper-slide__link" href="#">Подробнее</a> 
                                 </div>                            
                             </div>                        
                             <div class="swiper-slide swiper-slide_pasta">
@@ -104,7 +135,7 @@
                                 </h3>
                                 <div class="swiper-slide__hover">
                                     <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                    <a class="swiper-slide__link" href="#">Подробнее</a> 
                                 </div>                            
                             </div>
                             <div class="swiper-slide swiper-slide_steaks">
@@ -113,34 +144,7 @@
                                 </h3>
                                 <div class="swiper-slide__hover">
                                     <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
-                                </div>                            
-                            </div>
-                            <div class="swiper-slide swiper-slide_milk">
-                                <h3 class="swiper-slide__title">
-                                    Молочные продукты
-                                </h3>
-                                <div class="swiper-slide__hover">
-                                    <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
-                                </div>                            
-                            </div>                        
-                            <div class="swiper-slide swiper-slide_pasta">
-                                <h3 class="swiper-slide__title">
-                                    Бакалея
-                                </h3>
-                                <div class="swiper-slide__hover">
-                                    <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
-                                </div>                            
-                            </div>
-                            <div class="swiper-slide swiper-slide_steaks">
-                                <h3 class="swiper-slide__title">
-                                    Мясо, птица
-                                </h3>
-                                <div class="swiper-slide__hover">
-                                    <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
-                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                    <a class="swiper-slide__link" href="#">Подробнее</a> 
                                 </div>                            
                             </div>                                                 
                             <div class="swiper-button-next"></div>
@@ -151,6 +155,8 @@
                 </div>
             </div>
         </section>
+
+
         <section class="about">
             <div class="container">
                 <h1 class="title title_block">
@@ -174,6 +180,95 @@
                             Вкус
                         </li>
                     </ul>                  
+                </div>
+            </div>
+        </section>
+
+
+        <section class="trends">
+            <div class="container">
+                <h1 class="title title">
+                    Наши
+                    <span class="title__span">новинки</span>
+                </h1>
+                <div class="trends__text">
+                    <p class="description description_size-m">
+                        Будь в тренде с современным миром, и будь здоров вместе с нами
+                    </p>
+                </div>
+                <div class="slider">
+                    <div class="swiper trendsSwiper">
+                        <div class="swiper-wrapper">
+                            
+                            <div class="swiper-slide">
+                                <div class="swiper-slide__cover">
+                                    <img class="swiper-slide__image" src="images/catalog/milk1.png" alt="">
+                                </div>
+                                <h3 class="swiper-slide__title">
+                                    Молочные продукты
+                                </h3>
+                                <p class="swiper-slide__description">Молоко Healthy food топленое с мдж 4% 500 гр</p> 
+                                <p class="swiper-slide__prise">159 руб/шт</p>
+                                <div class="swiper-slide__footer">
+                                    <div class="counter">
+                                        <button class="counter__btn counter__minus"></button>
+                                        <input class="counter__input" type="text" value="0">
+                                        <button class="counter__btn counter__plus"></button>
+                                    </div>
+                                    <a href="#" class="link">В корзину</a>
+                                </div>
+                            </div>
+
+                            <div class="swiper-slide">
+                                <h3 class="swiper-slide__title">
+                                    Бакалея
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                </div>                            
+                            </div>
+                            <div class="swiper-slide">
+                                <h3 class="swiper-slide__title">
+                                    Мясо, птица
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                </div>                            
+                            </div>
+                            <div class="swiper-slide">
+                                <h3 class="swiper-slide__title">
+                                    Молочные продукты
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                </div>                            
+                            </div>                        
+                            <div class="swiper-slide">
+                                <h3 class="swiper-slide__title">
+                                    Бакалея
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                </div>                            
+                            </div>
+                            <div class="swiper-slide">
+                                <h3 class="swiper-slide__title">
+                                    Мясо, птица
+                                </h3>
+                                <div class="swiper-slide__hover">
+                                    <p class="swiper-slide__text">В наши дни появилась мода на&nbsp;здоровое питание, поэтому на&nbsp;рынке питания разработали органическое молоко. Органическое молоко является продуктом органического животноводства</p>
+                                    <a href="#" сlass="swiper-slide__link">Подробнее</a>
+                                </div>                            
+                            </div>                                                 
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-pagination"></div>
+                        </div> 
+                    </div>                                                 
                 </div>
             </div>
         </section>
