--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@
                                     Молочные продукты
                                 </h3>
                                 <p class="swiper-slide__description">Молоко Healthy food топленое<br>с мдж 4% 500 гр</p> 
-                                <p class="swiper-slide__prise">159 руб/шт</p>
+                                <p class="swiper-slide__price">159 руб/шт</p>
                                 <div class="swiper-slide__footer">
                                     <div class="counter">
                                         <button class="counter__btn counter__minus"></button>
@@ -233,7 +233,7 @@
                                     Яйцо перепелиное
                                 </h3>
                                 <p class="swiper-slide__description">QEGG Яйцо перепелиное 20шт</p> 
-                                <p class="swiper-slide__prise">94 руб/упак</p>
+                                <p class="swiper-slide__price">94 руб/упак</p>
                                 <div class="swiper-slide__footer">
                                     <div class="counter">
                                         <button class="counter__btn counter__minus"></button>
@@ -252,7 +252,7 @@
                                     Куриное филе Оссобуко
                                 </h3>
                                 <p class="swiper-slide__description">Куриное филе Оссобуко (Ангус)<br>охл скин. В вакумной уапаковке</p> 
-                                <p class="swiper-slide__prise">1009 руб/кг</p>
+                                <p class="swiper-slide__price">1009 руб/кг</p>
                                 <div class="swiper-slide__footer">
                                     <div class="counter">
                                         <button class="counter__btn counter__minus"></button>
@@ -480,11 +480,29 @@
                 <h1 class="title title">
                     Доставка
                     <span class="title__span">и оплата</span>
-                </h1>                
-                <div class="deliveri__text">
-                    <p class="description description_size-m">
-                        Еда которая заботится о вашей фигуре 
-                    </p>
+                </h1>        
+                <div class="deliveri__box">
+                        
+                    <div class="deliveri__text">
+                        <p class="description description_size-s deliveri__description">
+                            Мы доставляем ваши заказы курьером  в специально оборудованном транспорте.
+                        </p>
+                        <p class="description description_size-s description">
+                            Компания Healthly food предлагает самые удобные и быстрые способы доставки по&nbsp;всей стране. Посмотреть подробные условия и географию вы можете по&nbsp;этой <span class="deliveri__link">ссылке</span>
+                        </p>                    
+                    </div>
+
+                    <div class="deliveri__pay">
+                        <p class="description description_size-s">
+                            Вы можете оплатить заказ наличными или картой курьеру, либо воспользоваться функцией онлайн-оплаты и получить <span class="deliveri__color">скидку &nbsp;5%</span>.
+                        </p>
+                        <ul class="deliveri__list">
+                            <li class="deliveri__item deliveri__mastercard"></li>
+                            <li class="deliveri__item deliveri__visa"></li>
+                            <li class="deliveri__item deliveri__paypal"></li>
+                        </ul>                   
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -499,15 +517,15 @@
                             <span class="title__span">определиться?</span>
                         </h1> 
                         <div class="contact-box__text">
-                            <p class="description description_size-m">
+                            <p class="description description_size-s">
                                 Если у вас остались вопросы, вы можете задать отправить нам ваши данные. Наши менеджеры свяжутся с вами в течении рабочего дня. 
                             </p>
-                            <ul>
-                                <li>
-                                    <a href="tel:+79453425555">+7 945 342 55 55</a>
+                            <ul class="contact-box__list">
+                                <li class="contact-box__item">
+                                    <a class="contact-box__link contact-box__tel" href="tel:+79453425555">+7 945 342 55 55</a>
                                 </li>
                                 <li>
-                                    <a href="mailto:healthlyfood@mail.ru">+healthlyfood@mail.ru</a>
+                                    <a class="contact-box__link contact-box__mail" href="mailto:healthlyfood@mail.ru">healthlyfood@mail.ru</a>
                                 </li>
                             </ul>
                         </div>
