add file and chenge

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,13 @@
                  </ul>
              </nav>
              <a href="tel:+79453425555" class="header__tel">+7 945 342 55 55</a>
-             <button href="#" class="header__cart">
-                 <span class="header__counter">0</span>
-             </button>
+             <div class="header__buttons">
+                <a href="tel:+79453425555" class="header__phone"></a>
+                <button href="#" class="header__menu"></button>
+                <button href="#" class="header__cart">
+                    <span class="header__counter">0</span>
+                </button>
+             </div>             
          </header>
          <div class="container">
              <div class="main__flex">
@@ -476,8 +480,8 @@
     <section class="deliveri">
             <div class="container">
                 <h1 class="title title">
-                    Доставка
-                    <span class="title__span">и оплата</span>
+                    Доставка и
+                    <span class="title__span">оплата</span>
                 </h1>        
                 <div class="deliveri__box">
                         
