--- a/src/index.html
+++ b/src/index.html
@@ -320,6 +320,15 @@
                         <a class="category__link" href="">Овощи и фрукты</a>
                     </li>
                 </ul>
+                <div class="catalog__list category-swiper categorySwiper">
+                    <div class="swiper-wrapper">
+                        <a class="swiper-slide category-swiper__link" href="">Молочные продукты</a>
+                        <a class="swiper-slide category-swiper__link" href="">Бакалея</a>
+                        <a class="swiper-slide category-swiper__link" href="">Мясо, птица</a>
+                        <a class="swiper-slide category-swiper__link" href="">Детям</a>
+                        <a class="swiper-slide category-swiper__link" href="">Овощи и фрукты</a>
+                    </div>
+                </div>
 
                 <div class="catalog-grid">
                     <div class="catalog-grid__item">
