--- a/src/index.html
+++ b/src/index.html
@@ -497,7 +497,7 @@
                         
                     <div class="deliveri__text">
                         <p class="description description_size-s deliveri__description">
-                            Мы доставляем ваши заказы курьером  в специально оборудованном транспорте.
+                            Мы доставляем ваши заказы курьером  в&nbsp;специально оборудованном транспорте.
                         </p>
                         <p class="description description_size-s description">
                             Компания Healthly food предлагает самые удобные и быстрые способы доставки по&nbsp;всей стране. Посмотреть подробные условия и географию вы можете по&nbsp;этой <span class="deliveri__link">ссылке</span>
